# UVCshot-ultima-versione-funzionante

./: UsbPermissionHelper.kt  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/uvcshoot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_camera.cpp
app/src/main/java/com/example/uvcshoot/: CameraService.kt  MainActivity.kt  NativeBridge.kt  UsbPermissionHelper.kt  UvcController.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/uvcshoot/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
